--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "dotenv": "^16.3.1",
+    "flowbite": "^1.8.1",
     "next": "13.4.19",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
